--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mediasoup": "^3.16.4",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   }
 }
