--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "lowdb": "^7.0.1",
     "mediasoup": "^3.16.4",
     "socket.io": "^4.8.1",
     "ws": "^8.18.3"
