--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "lowdb": "^7.0.1",
     "mediasoup": "^3.16.4",
     "socket.io": "^4.8.1",
     "ws": "^8.18.3"
-  }
+  },
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
 }
