--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "mediasoup-client": "^3.12.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
